Avoid entity name overflow on entity preview

--- a/app/styles/_frame.scss
+++ b/app/styles/_frame.scss
@@ -391,6 +391,8 @@ body {
         color:white;
         font-size:20px;
         margin-bottom:10px;
+
+        @extend .truncate;
       }
 
       ul {
